<resources>
    <string name="app_name">OtpTest</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verifcation_subtitle">We will send you an One Time Password on this mobile number</string>
    <string name="enter_your_mobile_number_message">Enter your mobile number</string>
    <string name="country_code">+91</string>
    <string name="phone_input_hint">9999999999</string>
    <string name="send_otp_btn_text">Send OTP</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="sign_out">sign out</string>
</resources>